--- a/ember/static/index.html
+++ b/ember/static/index.html
@@ -41,6 +41,7 @@
 	
 	var map;	
 	var pointarray, heatmap;
+	var gradient;
 
 var taxiData = [
   new google.maps.LatLng(37.782551, -122.445368),
@@ -561,7 +562,7 @@ var taxiData = [
           center: new google.maps.LatLng(42.3482, -75.1890),
           zoom: 3
         };
-        var map = new google.maps.Map(document.getElementById("map-canvas"),
+        map = new google.maps.Map(document.getElementById("map-canvas"),
             mapOptions);
 
 			/*
@@ -647,31 +648,32 @@ var taxiData = [
       { "hue": "#00eeff" }
     ]
   }
-]
+];
 
 	map.setOptions({styles: styles});
 	
 	var pointArray = new google.maps.MVCArray(taxiData);
 	heatmap = new google.maps.visualization.HeatmapLayer({
-															data: pointArray
-																			 });
+															data: pointArray 
+}																			 );
   
-  var gradient = [
-    'rgba(0, 255, 255, 0)',
-    'rgba(10, 80, 50, 1)',
-    'rgba(10, 191, 255, 1)',
-    'rgba(20, 50, 200, 1)',
-    'rgba(30, 100, 255, 1)',
-    'rgba(40, 120, 200, 1)',
-    'rgba(60, 255, 255, 1)',
-    'rgba(80, 100, 110, 1)',
-    'rgba(110, 120, 135, 1)',
-    'rgba(140, 150, 180, 1)',
-    'rgba(170, 200, 210, 1)',
-    'rgba(100, 230, 230, 1)',
-    'rgba(150, 240, 240, 10)',
-    'rgba(255, 255, 255, 10)'
-  ]
+  gradient = [
+    'rgba(0, 255, 255, 0.5)',
+    'rgba(10, 10, 10, 0.8)',
+    'rgba(10, 10, 10, 1)',
+    'rgba(20, 20, 20, 1)',
+    'rgba(30, 30, 30, 1)',
+    'rgba(40, 60, 60, 1)',
+    'rgba(60, 60, 60, 1)',
+    'rgba(80, 80, 80, 1)',
+    'rgba(110, 130, 130, 1)',
+    'rgba(140, 170, 170, 1)',
+    'rgba(170, 210, 210, 1)',
+    'rgba(210, 210, 210, 1)',
+    'rgba(240, 240, 240, 1)',
+    'rgba(255, 255, 255, 1)'
+  ];
+  
   heatmap.set('gradient', heatmap.get('gradient') ? null : gradient);
 
   heatmap.setMap(map);
@@ -701,6 +703,9 @@ var taxiData = [
     </script>
   </head>
   <body>
+
+
+ 
 	
 	<nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
   <div class="container-fluid">
@@ -719,11 +724,12 @@ var taxiData = [
 	  </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		<form class="navbar-form navbar-left" role="search">
+
+<form name="input" class="navbar-form navbar-left" role="search">
       <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
+          <input id="myInput" type="text" class="form-control" placeholder="Search">
       </div>
-      <button type="submit" class="btn btn-default"> <span class="glyphicon glyphicon-retweet glyphicon-white"></span> </button>
+      <button id="searchButton" type="button" class="btn btn-default"> <span class="glyphicon glyphicon-retweet glyphicon-white"></span> </button>
       </form>
 
       <ul class="nav navbar-nav navbar-right">
@@ -740,7 +746,6 @@ var taxiData = [
     <div class="navbar-header">
       <button type="btn" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
         <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
 		<span class="glyphicon glyphicon-eject"></span>
         <span class="icon-bar"></span>
       </button>
@@ -752,14 +757,75 @@ var taxiData = [
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">		
       <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"> <b>Credits:</b> Anjishnu Kumar, (c) April 2014   </a></li>
-            <li><a href="#"> CS 6998: Cloud Computng and Big Data </a></li>          	  	  
+            <li><a href="https://www.linkedin.com/pub/anjishnu-kumar/30/985/b56/"> <b>Credits:</b> Anjishnu Kumar, (c) April 2014   </a></li>
+            <li><a href="https://www.linkedin.com/pub/sambit-sahu/11/464/991"> For CS 6998: Cloud Computng and Big Data under Dr. Sambit Sahu </a></li>          	  	  
 	  </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 
+<script type="text/javascript">
+	//Bits of Javascript/JQuery code to make things cool
+	$( document ).ready(function() {
+ 	
+	
+	var populateData = function(list) {
 
+		arraylength = list.length;
+		var taxiData =[];
+		heatmap.setMap(null);
+		console.log("PopulateData initiated");
+
+		for (i=0;i<arraylength;i++)
+		{	var listentry = list[i];
+			var latitude = listentry[0];
+			var longitude = listentry[1];
+			taxiData.push( new google.maps.LatLng(latitude, longitude));
+			heatmap = new google.maps.visualization.HeatmapLayer({ data: pointArray}
+			heatmap.set('gradient', heatmap.get('gradient') ? null : gradient);
+			heatmap.setMap(map);
+		}
+		console.log(taxiData.length);
+		var pointArray = new google.maps.MVCArray(taxiData);
+		);
+		
+
+		console.log("Complete");
+
+	}
+	
+     	var frm = $("form");
+	frm.submit(function(ev) {
+		
+		ev.preventDefault();		
+		
+	});
+	
+	$("#searchButton").click(
+	function(){
+	var tmp = $("#myInput").val();
+	console.log("Ajaxing");	
+	$.ajax({
+
+  		url: "http://ember-heatmap.appspot.com/search",
+  		type:"get", //send it through get method
+		data: {"term": tmp},
+  		
+		success: function(response) {
+		var obj = jQuery.parseJSON(response);
+		console.log(obj.list.length);
+		populateData(obj.list);
+  		}
+  	              });
+
+
+	}
+	);
+	
+
+ 
+});
+</script>
 
     <div id="map-canvas"/>
 	
